<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_receipt_black_24dp"
        android:title="@string/pesanan" />
    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/akun" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/about"/>
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_insert_comment_black_24dp"
        android:title="@string/chat" />
</menu>
